cmake_minimum_required(VERSION 3.5.1)

project(NJLIC)
# file(GLOB SOURCE_FILES
# 	${NJLIC_SOURCE_DIR}src/*.c
# 	${NJLIC_SOURCE_DIR}src/*.cpp
# )
# 
# file(GLOB INCLUDE_FILES
# 	${NJLIC_SOURCE_DIR}include/*.h
# )
# 
# install(FILES ${SOURCE_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/src )
# install(FILES ${INCLUDE_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include )

include(CMakeDependentOption)
include(GNUInstallDirs)
